--- a/styles/site-plan.css
+++ b/styles/site-plan.css
@@ -39,6 +39,7 @@ body {
 img {
   display: block;
   margin: 0 auto;
+  width: fit-content;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
@@ -172,4 +173,7 @@ nav a:hover {
   grid-area: right;
   border-top: 1px solid;
   border-right: 1px solid;
+}
+.image{
+  width: 100%;
 }
