--- a/styles/site-plan.css
+++ b/styles/site-plan.css
@@ -15,15 +15,15 @@ Fonts are separated by a | */
   --paragraph-font: "Open Sans", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
+  --headline-color-on-white: #0096d6;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #0096d6; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
+  --paragraph-background-color: #0096d6  ;
+  --nav-link-color: #ffffff;
+  --nav-background-color: #0096d6;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --nav-hover-background-color: #848484;
 }
 
 
@@ -105,6 +105,7 @@ nav {
   line-height: 3em;
   text-align: center;
   font-size: 1.2em;
+  font-family: "Open Sans", Helvetica, sans-serif;
 }
 nav  {
   list-style-type: none;
